<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SurtidoIntentImpl</string>
    <string name="action_settings">Settings</string>
    <string name="conociendo">Conociendo la EPS</string>
    <string name="ubicando">Localizacion</string>
    <string name="navegando">Acceso a la web</string>
    <string name="contactando">Tlf. de contacto: 973.702.700</string>
    <string name="Boton1">Por coord.</string>
    <string name="Boton2">Por direcc.</string>
    <string name="Boton3">Por URL</string>
    <string name="Boton4">Google</string>
    <string name="Boton5">Llamar</string>
    <string name="Boton6">Acceder Contactos</string>
    <string name="telef">666666666</string>
    <string name="BotonMarcar">Marcar</string>

    <string name="lat">41.60788</string>
    <string name="lon">0.623333</string>
    <string name="url">http://www.eps.udl.cat/ca/</string>
    <string name="direccion">Carrer de Jaume II, 69, Lleida</string>
    <string name="textoABuscar">escuela politecnica superior UdL</string>

    <string name="opcion1">Seleccionado Localizacion por coordenadas</string>
    <string name="opcion2">Seleccionado Localizacion por dirección</string>
    <string name="opcion3">Accediendo a la web</string>
    <string name="opcion4">Buscando en Google</string>
    <string name="opcion5">Llamando al Tlfn.</string>
    <string name="opcion6">Accediendo a contactos</string>
    <string name="opcioMarcar">Marcando el telefono</string>
    <string name="opcionSms">Enviar sms</string>
    <string name="opcionEmail">Enviar email</string>
    <string name="opcionGallery">Entrando Galleria</string>


    <string name="udlpage">http://www.udl.cat</string>
    <string name="BotonSms">Enviar un SMS con Buenas Tardes</string>
    <string name="buttonEmail">Enviar email a palomitas88tucasa@gmail.com</string>
    <string name="gallery">Acceder Galería imágenes</string>


</resources>